--- a/developer/07-eureka/eureka/src/main/resources/application.yml
+++ b/developer/07-eureka/eureka/src/main/resources/application.yml
@@ -1,6 +1,11 @@
+
 eureka:
+  numberRegistrySyncRetries: 1
   instance:
-    hostname: localhost
+    preferIpAddress: true
+    hostname: eureka-server
   client:
     registerWithEureka: false
     fetchRegistry: false
+  server:
+    enable-self-preservation: false
