--- a/developer/07-eureka/service-provider/src/main/resources/application.yml
+++ b/developer/07-eureka/service-provider/src/main/resources/application.yml
@@ -1,2 +1,8 @@
 server:
-   port: 8090
+   port: 8080
+
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://my-eureka-service:8080/eureka/
