--- a/developer/07-eureka/service-consumer-feign/src/main/resources/application.yml
+++ b/developer/07-eureka/service-consumer-feign/src/main/resources/application.yml
@@ -1,11 +1,7 @@
 server:
-  port: 8080
+  port: 8090
 
 consumed:
   microservice:
-    name: "PROVIDERSERVICE"
+    name: "provider-service"
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://my-eureka-service:8080/eureka/
